--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -24,8 +24,15 @@
         android:layout_height="match_parent"
         android:background="@drawable/rounded_auth_ui"
         android:backgroundTint="@color/white"
+        >
 
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/frame_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
-        ></RelativeLayout>
+    </RelativeLayout>
 
 </LinearLayout>
