--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -17,7 +17,7 @@
         android:textStyle="bold"
         android:textSize="46dp"
         android:textColor="@color/white"
-        android:text=" Hey! \n Welcome Back"/>
+        android:text=" Halo! \n Selamat Datang"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -27,9 +27,8 @@
         >
 
         <FrameLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/frame_container"
+            android:layout_marginTop="20sp"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
