--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -1,37 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/blue"
-    android:orientation="vertical"
     tools:context=".ui.auth.AuthActivity">
 
     <TextView
+        android:id="@+id/hello_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="30dp"
-        android:layout_marginHorizontal="20dp"
+        android:layout_marginVertical="35dp"
+        android:layout_marginHorizontal="35dp"
         android:textStyle="bold"
-        android:textSize="46dp"
+        android:textSize="65sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:fontFamily="@font/pt_sans"
         android:textColor="@color/white"
-        android:text=" Halo! \n Selamat Datang"/>
+        android:text="@string/hello"/>
+
+    <TextView
+        android:id="@+id/welcome_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="35dp"
+        android:textStyle="bold"
+        android:textSize="42sp"
+        android:fontFamily="@font/pt_sans"
+        android:textColor="@color/white"
+        app:layout_constraintTop_toBottomOf="@+id/hello_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="@string/welcome_text"/>
 
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:id="@+id/tab_auth"
+        android:layout_marginTop="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        app:layout_constraintTop_toBottomOf="@id/welcome_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:background="@drawable/rounded_auth_ui"
         android:backgroundTint="@color/white"
         >
 
-        <FrameLayout
-            android:id="@+id/frame_container"
-            android:layout_marginTop="20sp"
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabs"
+            android:layout_marginTop="10sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="30sp"
+            app:tabTextAppearance="@style/tab_text"
+            app:tabTextColor="@color/blue"/>
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/view_pager"
+            android:layout_marginTop="70sp"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
+
     </RelativeLayout>
 
-</LinearLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="35dp"
+        android:text="@string/copyright_text"
+        android:textColor="@color/blue"
+        android:gravity="bottom|center"
+        android:layout_marginBottom="10sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
