--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,35 +7,80 @@
     android:id="@+id/home"
     tools:context=".ui.home.HomeActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/topAppBar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:menu="@menu/option_menu"
-            app:title="@string/app_name" />
-
-    </com.google.android.material.appbar.AppBarLayout>
-
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="110dp"
         android:layout_marginTop="15dp"
         android:background="@drawable/custom_input"
         android:layout_marginHorizontal="10dp"
         app:layout_constraintTop_toTopOf="@id/home"
+        app:cardCornerRadius="10dp"
         >
 
         <EditText
             android:id="@+id/text_input"
             android:background="@drawable/custom_input"
             android:layout_width="match_parent"
+            android:drawableStart="@drawable/search"
+            android:drawablePadding="0sp"
+            android:padding="11sp"
+            android:hint="ex:software engineer, data engineer"
+            android:textSize="14sp"
+            android:fontFamily="sans-serif"
+            android:textColorHint="@color/gray"
             android:layout_marginTop="15sp"
             android:layout_marginHorizontal="15sp"
             android:layout_height="40sp"/>
+
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50sp"
+            android:layout_marginHorizontal="15sp"
+            android:stretchColumns="3">
+            <TableRow>
+                <EditText
+                    android:id="@+id/location_input"
+                    android:background="@drawable/custom_input"
+                    android:layout_width="match_parent"
+                    android:drawablePadding="0sp"
+                    android:hint="location"
+                    android:paddingHorizontal="20dp"
+                    android:textSize="14sp"
+                    android:fontFamily="sans-serif"
+                    android:textColorHint="@color/blue"
+                    android:layout_marginTop="15sp"
+                    android:layout_height="30sp"/>
+
+                <EditText
+                    android:id="@+id/type_input"
+                    android:background="@drawable/custom_input"
+                    android:layout_width="match_parent"
+                    android:drawablePadding="0sp"
+                    android:layout_marginLeft="5sp"
+                    android:hint="type"
+                    android:paddingHorizontal="20dp"
+                    android:textSize="14sp"
+                    android:fontFamily="sans-serif"
+                    android:textColorHint="@color/blue"
+                    android:layout_marginTop="15sp"
+                    android:layout_height="30sp"/>
+
+                <EditText
+                    android:id="@+id/remote_input"
+                    android:background="@drawable/custom_input"
+                    android:layout_width="match_parent"
+                    android:drawablePadding="0sp"
+                    android:layout_marginLeft="5sp"
+                    android:hint="remote"
+                    android:paddingHorizontal="20dp"
+                    android:textSize="14sp"
+                    android:fontFamily="sans-serif"
+                    android:textColorHint="@color/blue"
+                    android:layout_marginTop="15sp"
+                    android:layout_height="30sp"/>
+            </TableRow>
+        </TableLayout>
 
 
     </androidx.cardview.widget.CardView>
@@ -44,7 +89,7 @@
         android:id="@+id/text_list_job"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="140sp"
+        android:layout_marginTop="150sp"
         android:text="List Job"
         android:textSize="16sp"
         android:fontFamily="sans-serif"
