--- a/app/src/main/res/layout/activity_lupa_password.xml
+++ b/app/src/main/res/layout/activity_lupa_password.xml
@@ -12,9 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/forgot_password_text"
-        android:fontFamily="sans-serif"
+        android:fontFamily="@font/pt_sans"
         android:textColor="@color/blue"
-        android:textSize="36dp"
+        android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -40,26 +40,27 @@
     <EditText
         android:id="@+id/input_email_login"
         android:layout_width="match_parent"
-        android:layout_height="50sp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="35dp"
+        android:background="@drawable/custom_input"
         android:drawablePadding="5dp"
         android:fontFamily="sans-serif"
-        android:textSize="14sp"
         android:padding="12dp"
-        android:background="@drawable/custom_input"
-        android:hint="@string/email_hint"
-        android:layout_marginHorizontal="35dp"
-        app:layout_constraintTop_toBottomOf="@+id/email_text"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/email_text" />
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="50dp"
         android:layout_marginTop="20sp"
         android:text="@string/forgot_password"
         android:textStyle="bold"
         android:textSize="18dp"
+        android:layout_height="50sp"
+        android:background="@drawable/custom_input"
+        android:textAppearance="@style/tab_text"
+        android:fontFamily="@font/pt_sans"
         android:layout_marginHorizontal="35dp"
         app:layout_constraintTop_toBottomOf="@+id/input_email_login"
         app:layout_constraintStart_toStartOf="parent"
