--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,10 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.auth.signup.SignUpFragment">
+    tools:context=".ui.profile.ProfileActivity">
+
+    <ImageView
+        android:id="@+id/image_profile"
+        android:layout_width="225dp"
+        android:layout_height="225dp"
+        android:contentDescription="@string/photo_profile"
+        android:layout_gravity="center"
+        tools:src="@tools:sample/avatars"
+        android:layout_marginTop="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <TextView
         android:layout_width="match_parent"
@@ -12,9 +26,8 @@
         android:layout_marginTop="10sp"
         android:text="@string/name"
         android:textSize="14sp"
-        android:fontFamily="@font/pt_sans"
         android:layout_marginHorizontal="35dp"
-        android:textColor="@color/blue"
+        android:textColor="@color/black"
         />
 
     <EditText
@@ -22,7 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawablePadding="5dp"
-        android:fontFamily="@font/pt_sans"
+        android:fontFamily="sans-serif"
         android:textSize="14sp"
         android:padding="12dp"
         android:background="@drawable/custom_input"
@@ -32,11 +45,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10sp"
-        android:fontFamily="@font/pt_sans"
         android:text="@string/email"
         android:textSize="14sp"
         android:layout_marginHorizontal="35dp"
-        android:textColor="@color/blue"
+        android:textColor="@color/black"
         />
 
     <EditText
@@ -44,7 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawablePadding="5dp"
-        android:fontFamily="@font/pt_sans"
+        android:fontFamily="sans-serif"
         android:textSize="14sp"
         android:padding="12dp"
         android:background="@drawable/custom_input"
@@ -54,11 +66,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10sp"
-        android:fontFamily="@font/pt_sans"
-        android:text="@string/password"
+        android:text="@string/nomor_handphone"
         android:textSize="14sp"
         android:layout_marginHorizontal="35dp"
-        android:textColor="@color/blue"
+        android:textColor="@color/black"
         />
 
     <EditText
@@ -66,7 +77,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawablePadding="5dp"
-        android:fontFamily="@font/pt_sans"
+        android:fontFamily="sans-serif"
         android:textSize="14sp"
         android:padding="12dp"
         android:background="@drawable/custom_input"
@@ -77,11 +88,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10sp"
-        android:fontFamily="@font/pt_sans"
-        android:text="@string/confirm_password"
+        android:text="minat"
         android:textSize="14sp"
         android:layout_marginHorizontal="35dp"
-        android:textColor="@color/blue"
+        android:textColor="@color/black"
         />
 
     <EditText
@@ -89,65 +99,76 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawablePadding="5dp"
-        android:fontFamily="@font/pt_sans"
+        android:fontFamily="sans-serif"
         android:textSize="14sp"
         android:padding="12dp"
         android:background="@drawable/custom_input"
         android:layout_marginHorizontal="35dp" />
 
-    <Button
-        android:id="@+id/btn_login"
-        android:layout_marginTop="20sp"
-        android:layout_marginHorizontal="35dp"
-        android:layout_height="50sp"
-        android:layout_width="match_parent"
-        android:background="@drawable/custom_input"
-        android:textAppearance="@style/tab_text"
-        android:fontFamily="@font/pt_sans"
-        android:text="Daftar"
-        android:textStyle="bold"
-        />
-
-    <TableLayout
-        android:layout_marginHorizontal="35dp"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:stretchColumns="3">
+        android:layout_marginTop="10sp"
+        android:text="@string/password"
+        android:textSize="14sp"
+        android:layout_marginHorizontal="35dp"
+        android:textColor="@color/black"
+        />
 
-        <TableRow
-            android:gravity="center_horizontal"
-            >
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/blue"
-                android:text="@string/or"
-                android:layout_marginHorizontal="2sp"
-                android:fontFamily="@font/pt_sans"
-                />
+    <EditText
+        android:id="@+id/input_confirm_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawablePadding="5dp"
+        android:fontFamily="sans-serif"
+        android:textSize="14sp"
+        android:padding="12dp"
+        android:background="@drawable/custom_input"
+        android:layout_marginHorizontal="35dp" />
 
-            <TextView
-                android:id="@+id/login_text"
-                android:layout_width="wrap_content"
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50sp"
+        android:layout_marginHorizontal="35dp"
+        android:stretchColumns="*">
+
+        <TableRow >
+            <Button
+                android:id="@+id/btn_cancel"
                 android:layout_height="wrap_content"
-                android:textColor="@color/blue"
-                android:layout_marginHorizontal="2sp"
-                android:text="@string/masuk_btn"
+                android:layout_width="match_parent"
                 android:textStyle="bold"
-                android:fontFamily="@font/pt_sans"
+                android:textSize="20sp"
+                android:padding="10dp"
+                android:text="Batal"
+                android:layout_marginRight="5sp"
+                android:textColor="@color/white"
                 />
 
-            <TextView
-                android:layout_width="wrap_content"
+            <Button
+                android:id="@+id/btn_save"
                 android:layout_height="wrap_content"
-                android:textColor="@color/blue"
-                android:text="disini"
-                android:layout_marginHorizontal="2sp"
-                android:fontFamily="@font/pt_sans"
+                android:layout_width="match_parent"
+                android:padding="10dp"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:text="Simpan"
+                android:layout_marginLeft="5sp"
+                android:textColor="@color/white"
                 />
         </TableRow>
 
     </TableLayout>
 
-
+    <Button
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="35dp"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:padding="10dp"
+        android:text="logout"
+        android:textColor="@color/white"
+        />
 </LinearLayout>
