--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -12,6 +12,7 @@
         android:layout_marginTop="10sp"
         android:text="@string/email"
         android:textSize="14sp"
+        android:fontFamily="@font/pt_sans"
         android:layout_marginHorizontal="35dp"
         android:textColor="@color/blue"
         />
@@ -19,13 +20,12 @@
     <EditText
         android:id="@+id/input_email_login"
         android:layout_width="match_parent"
-        android:layout_height="50sp"
+        android:layout_height="45sp"
         android:drawablePadding="5dp"
-        android:fontFamily="sans-serif"
+        android:fontFamily="@font/pt_sans"
         android:textSize="14sp"
         android:padding="12dp"
         android:background="@drawable/custom_input"
-        android:hint="@string/email_hint"
         android:layout_marginHorizontal="35dp" />
 
     <TextView
@@ -33,6 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10sp"
         android:text="@string/password"
+        android:fontFamily="@font/pt_sans"
         android:textSize="14sp"
         android:layout_marginHorizontal="35dp"
         android:textColor="@color/blue"
@@ -41,39 +42,78 @@
     <EditText
         android:id="@+id/input_password_login"
         android:layout_width="match_parent"
-        android:layout_height="50sp"
-        android:drawablePadding="5dp"
-        android:fontFamily="sans-serif"
-        android:textSize="14sp"
-        android:padding="12dp"
+        android:layout_height="45sp"
+        android:layout_marginHorizontal="35dp"
         android:background="@drawable/custom_input"
-        android:hint="@string/password_hint"
-        android:layout_marginHorizontal="35dp" />
+        android:drawablePadding="5dp"
+        android:fontFamily="@font/pt_sans"
+        android:padding="12dp"
+        android:textSize="14sp" />
 
     <TextView
+        android:id="@+id/text_forgetpassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="35dp"
-        android:text="lupa kata sandi"
+        android:fontFamily="@font/pt_sans"
+        android:text="@string/lupa_kata_sandi"
         android:textColor="@color/blue"
         android:textAlignment="textEnd"
         />
 
     <Button
+        android:id="@+id/btn_masuk"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="50sp"
+        android:background="@drawable/custom_input"
         android:layout_marginTop="10sp"
-        android:text="Masuk"
+        android:fontFamily="@font/pt_sans"
+        android:textStyle="bold"
+        android:text="@string/masuk_text"
+        android:textAppearance="@style/tab_text"
         android:layout_marginHorizontal="35dp"
         />
 
-    <TextView
+    <TableLayout
+        android:layout_marginHorizontal="35dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/blue"
-        android:textSize="14sp"
-        android:text="atau daftar disini"
         android:textAlignment="center"
-        />
+        android:stretchColumns="3">
+
+        <TableRow
+            android:gravity="center_horizontal"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/blue"
+                android:text="@string/or"
+                android:layout_marginHorizontal="2sp"
+                android:fontFamily="@font/pt_sans"
+                />
+
+            <TextView
+                android:id="@+id/register"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/blue"
+                android:layout_marginHorizontal="2sp"
+                android:text="daftar"
+                android:textStyle="bold"
+                android:fontFamily="@font/pt_sans"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/blue"
+                android:text="disini"
+                android:layout_marginHorizontal="2sp"
+                android:fontFamily="@font/pt_sans"
+                />
+        </TableRow>
+
+    </TableLayout>
 
 </LinearLayout>
