--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -21,57 +21,28 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:textSize="20sp"
             android:fontFamily="@font/pt_sans"
-            android:textStyle="bold"
+            android:textSize="18sp"
             android:textColor="@color/black"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toTopOf="parent"
-            tools:text="Software Engineer Intern" />
+            tools:text="Lowongan baru sebagai Data Engineer" />
 
         <TextView
             android:id="@+id/tv_job_company"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:fontFamily="@font/pt_sans"
             android:layout_marginEnd="8dp"
             android:textSize="15sp"
-            android:fontFamily="@font/pt_sans"
-            android:textColor="@color/black"
+            android:textColor="@color/gray"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toBottomOf="@id/tv_job_name"
-            tools:text="Tokopedia" />
+            tools:text="ada 10+ perusahaan yang menyediakan lowongan magang menjadi Game Developer " />
 
-        <TextView
-            android:id="@+id/tv_job_location"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:fontFamily="@font/pt_sans"
-            android:textSize="14sp"
-            android:textColor="@color/black"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@id/tv_job_company"
-            tools:text="Jakarta" />
-
-        <TextView
-            android:id="@+id/tv_job_timestamp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:fontFamily="@font/pt_sans"
-            android:layout_marginTop="10dp"
-            android:textSize="14sp"
-            android:textColor="@color/black"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@id/tv_job_location"
-            tools:text="Dikirim satu bulan lalu" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
