--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="blue">#38B6FF</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#757474</color>
+    <color name="red">#FF3838</color>
 </resources>
