--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -20,18 +20,19 @@
             android:layout_height="100dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:src="@tools:sample/avatars"
+            android:src="@drawable/pt__tokopedia_logo"
             />
 
         <TextView
             android:id="@+id/job_title"
             android:layout_height="wrap_content"
             android:layout_width="300dp"
-            android:textSize="22sp"
+            android:textSize="20sp"
             android:text="@string/job_title"
             android:padding="5sp"
+            android:textColor="@color/black"
             android:textStyle="bold"
-            android:fontFamily="sans-serif"
+            android:fontFamily="@font/pt_sans"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@id/company_img"
             />
@@ -50,7 +51,7 @@
             />
 
         <TextView
-            android:id="@+id/location"
+            android:id="@+id/location_job"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:paddingLeft="5sp"
@@ -69,6 +70,7 @@
         android:layout_marginHorizontal="20sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
         android:text="@string/detail_work"
@@ -89,6 +91,7 @@
         android:layout_marginTop="5sp"
         android:layout_marginHorizontal="20sp"
         android:layout_width="match_parent"
+        android:textColor="@color/black"
         android:layout_height="wrap_content"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -104,4 +107,17 @@
         android:textSize="14sp"
         android:text="@string/requirement_desc"
         />
+
+    <Button
+        android:id="@+id/btn_lamar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="35dp"
+        android:layout_marginTop="30sp"
+        android:background="@drawable/custom_input"
+        android:fontFamily="@font/pt_sans"
+        android:text="lamar"
+        android:layout_gravity="right"
+        android:textAppearance="@style/tab_text"
+        android:textStyle="bold" />
 </LinearLayout>
