--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,174 +1,190 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".ui.profile.ProfileActivity">
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/image_profile"
-        android:layout_width="225dp"
-        android:layout_height="225dp"
-        android:contentDescription="@string/photo_profile"
-        android:layout_gravity="center"
-        tools:src="@tools:sample/avatars"
-        android:layout_marginTop="30sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10sp"
-        android:text="@string/name"
-        android:textSize="14sp"
-        android:layout_marginHorizontal="35dp"
-        android:textColor="@color/black"
-        />
+        android:orientation="vertical"
+       >
 
-    <EditText
-        android:id="@+id/input_name_signup"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawablePadding="5dp"
-        android:fontFamily="sans-serif"
-        android:textSize="14sp"
-        android:padding="12dp"
-        android:background="@drawable/custom_input"
-        android:layout_marginHorizontal="35dp" />
+        <ImageView
+            android:id="@+id/image_profile"
+            android:layout_width="175dp"
+            android:layout_height="175dp"
+            android:contentDescription="@string/photo_profile"
+            android:layout_gravity="center"
+            android:src="@drawable/vector"
+            android:layout_marginVertical="50sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10sp"
-        android:text="@string/email"
-        android:textSize="14sp"
-        android:layout_marginHorizontal="35dp"
-        android:textColor="@color/black"
-        />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10sp"
+            android:text="@string/name"
+            android:textSize="14sp"
+            android:layout_marginHorizontal="35dp"
+            android:textColor="@color/black"
+            />
 
-    <EditText
-        android:id="@+id/input_email_signup"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawablePadding="5dp"
-        android:fontFamily="sans-serif"
-        android:textSize="14sp"
-        android:padding="12dp"
-        android:background="@drawable/custom_input"
-        android:layout_marginHorizontal="35dp" />
+        <EditText
+            android:id="@+id/input_name_signup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawablePadding="5dp"
+            android:fontFamily="sans-serif"
+            android:textSize="14sp"
+            android:padding="12dp"
+            android:background="@drawable/custom_input"
+            android:layout_marginHorizontal="35dp" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10sp"
-        android:text="@string/nomor_handphone"
-        android:textSize="14sp"
-        android:layout_marginHorizontal="35dp"
-        android:textColor="@color/black"
-        />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10sp"
+            android:text="@string/email"
+            android:textSize="14sp"
+            android:layout_marginHorizontal="35dp"
+            android:textColor="@color/black"
+            />
 
-    <EditText
-        android:id="@+id/input_password_signup"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawablePadding="5dp"
-        android:fontFamily="sans-serif"
-        android:textSize="14sp"
-        android:padding="12dp"
-        android:background="@drawable/custom_input"
-        android:layout_marginHorizontal="35dp" />
+        <EditText
+            android:id="@+id/input_email_signup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawablePadding="5dp"
+            android:fontFamily="sans-serif"
+            android:textSize="14sp"
+            android:padding="12dp"
+            android:background="@drawable/custom_input"
+            android:layout_marginHorizontal="35dp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10sp"
+            android:text="@string/nomor_handphone"
+            android:textSize="14sp"
+            android:layout_marginHorizontal="35dp"
+            android:textColor="@color/black"
+            />
+
+        <EditText
+            android:id="@+id/input_password_signup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawablePadding="5dp"
+            android:fontFamily="sans-serif"
+            android:textSize="14sp"
+            android:padding="12dp"
+            android:background="@drawable/custom_input"
+            android:layout_marginHorizontal="35dp" />
 
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10sp"
-        android:text="minat"
-        android:textSize="14sp"
-        android:layout_marginHorizontal="35dp"
-        android:textColor="@color/black"
-        />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10sp"
+            android:text="minat"
+            android:textSize="14sp"
+            android:layout_marginHorizontal="35dp"
+            android:textColor="@color/black"
+            />
 
-    <EditText
-        android:id="@+id/input_confirm_password_signup"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawablePadding="5dp"
-        android:fontFamily="sans-serif"
-        android:textSize="14sp"
-        android:padding="12dp"
-        android:background="@drawable/custom_input"
-        android:layout_marginHorizontal="35dp" />
+        <EditText
+            android:id="@+id/input_confirm_password_signup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawablePadding="5dp"
+            android:fontFamily="sans-serif"
+            android:textSize="14sp"
+            android:padding="12dp"
+            android:background="@drawable/custom_input"
+            android:layout_marginHorizontal="35dp" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10sp"
-        android:text="@string/password"
-        android:textSize="14sp"
-        android:layout_marginHorizontal="35dp"
-        android:textColor="@color/black"
-        />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10sp"
+            android:text="@string/password"
+            android:textSize="14sp"
+            android:layout_marginHorizontal="35dp"
+            android:textColor="@color/black"
+            />
 
-    <EditText
-        android:id="@+id/input_confirm_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawablePadding="5dp"
-        android:fontFamily="sans-serif"
-        android:textSize="14sp"
-        android:padding="12dp"
-        android:background="@drawable/custom_input"
-        android:layout_marginHorizontal="35dp" />
+        <EditText
+            android:id="@+id/input_confirm_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawablePadding="5dp"
+            android:fontFamily="sans-serif"
+            android:textSize="14sp"
+            android:padding="12dp"
+            android:background="@drawable/custom_input"
+            android:layout_marginHorizontal="35dp" />
 
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50sp"
-        android:layout_marginHorizontal="35dp"
-        android:stretchColumns="*">
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50sp"
+            android:layout_marginHorizontal="35dp"
+            android:stretchColumns="*">
 
-        <TableRow >
-            <Button
-                android:id="@+id/btn_cancel"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:textStyle="bold"
-                android:textSize="20sp"
-                android:padding="10dp"
-                android:text="Batal"
-                android:layout_marginRight="5sp"
-                android:textColor="@color/white"
-                />
+            <TableRow >
+                <Button
+                    android:id="@+id/btn_cancel"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    android:background="@drawable/custom_input"
+                    android:fontFamily="@font/pt_sans"
+                    android:text="Batal"
+                    android:textAppearance="@style/outline_button"
+                    android:backgroundTint="@color/white"
+                    android:layout_marginRight="5sp"
+                    android:textColor="@color/white"
+                    />
 
-            <Button
-                android:id="@+id/btn_save"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:padding="10dp"
-                android:textStyle="bold"
-                android:textSize="20sp"
-                android:text="Simpan"
-                android:layout_marginLeft="5sp"
-                android:textColor="@color/white"
-                />
-        </TableRow>
+                <Button
+                    android:id="@+id/btn_save"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:background="@drawable/custom_input"
+                    android:textAppearance="@style/tab_text"
+                    android:fontFamily="@font/pt_sans"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    android:text="Simpan"
+                    android:layout_marginLeft="5sp"
+                    android:textColor="@color/white"
+                    />
+            </TableRow>
 
-    </TableLayout>
+        </TableLayout>
 
-    <Button
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:layout_marginHorizontal="35dp"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        android:padding="10dp"
-        android:text="logout"
-        android:textColor="@color/white"
-        />
-</LinearLayout>
+        <Button
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_marginTop="10sp"
+            android:layout_marginBottom="20sp"
+            android:layout_marginHorizontal="35dp"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:backgroundTint="@color/red"
+            android:textAppearance="@style/tab_text"
+            android:fontFamily="@font/pt_sans"
+            android:padding="10sp"
+            android:text="logout"
+            android:textColor="@color/white"
+            />
+    </LinearLayout>
+
+</ScrollView>
