--- a/app/src/main/res/layout/activity_lupa_password.xml
+++ b/app/src/main/res/layout/activity_lupa_password.xml
@@ -52,6 +52,7 @@
         app:layout_constraintTop_toBottomOf="@+id/email_text" />
 
     <Button
+        android:id="@+id/btn_forget_password"
         android:layout_width="match_parent"
         android:layout_marginTop="20sp"
         android:text="@string/forgot_password"
