--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -24,6 +24,7 @@
             android:drawableStart="@drawable/search"
             android:drawablePadding="0sp"
             android:padding="11sp"
+            android:imeOptions="actionDone"
             android:hint="ex:software engineer, data engineer"
             android:textSize="14sp"
             android:fontFamily="sans-serif"
@@ -44,6 +45,7 @@
                     android:background="@drawable/custom_input"
                     android:layout_width="match_parent"
                     android:drawablePadding="0sp"
+                    android:imeOptions="actionDone"
                     android:hint="location"
                     android:paddingHorizontal="20dp"
                     android:textSize="14sp"
@@ -58,7 +60,7 @@
                     android:layout_width="match_parent"
                     android:drawablePadding="0sp"
                     android:layout_marginLeft="5sp"
-                    android:hint="type"
+                    android:hint="remote"
                     android:paddingHorizontal="20dp"
                     android:textSize="14sp"
                     android:fontFamily="sans-serif"
@@ -66,14 +68,14 @@
                     android:layout_marginTop="15sp"
                     android:layout_height="30sp"/>
 
-                <EditText
-                    android:id="@+id/remote_input"
+                <Button
+                    android:id="@+id/btn_search"
                     android:background="@drawable/custom_input"
                     android:layout_width="match_parent"
-                    android:drawablePadding="0sp"
                     android:layout_marginLeft="5sp"
-                    android:hint="remote"
-                    android:paddingHorizontal="20dp"
+                    android:text="search"
+                    android:textAppearance="@style/tab_text"
+                    android:padding="0sp"
                     android:textSize="14sp"
                     android:fontFamily="sans-serif"
                     android:textColorHint="@color/blue"
@@ -134,5 +136,15 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/subtitle_list_job"
         />
+
+    <ImageView
+        android:id="@+id/img_empty"
+        android:layout_width="200dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/empty"
+        android:layout_height="200dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
