--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,123 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    android:orientation="vertical"
-    tools:context=".ui.detail.DetailActivity">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+   android:layout_width="match_parent"
+   android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_marginTop="25sp"
-        android:layout_marginHorizontal="20sp"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent">
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:orientation="vertical"
+        tools:context=".ui.detail.DetailActivity">
 
-        <ImageView
-            android:id="@+id/company_img"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:src="@drawable/pt__tokopedia_logo"
-            />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_marginTop="25sp"
+            android:layout_marginHorizontal="20sp"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent">
+
+            <ImageView
+                android:id="@+id/company_img"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:src="@drawable/pt__tokopedia_logo"
+                />
+
+            <TextView
+                android:id="@+id/job_title"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:textSize="20sp"
+                android:text="@string/job_title"
+                android:padding="5sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:fontFamily="@font/pt_sans"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/company_img"
+                />
+
+            <TextView
+                android:id="@+id/company_name"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:paddingLeft="5sp"
+                android:textSize="14sp"
+                android:text="@string/company"
+                android:textColor="@color/gray"
+                android:fontFamily="sans-serif-light"
+                app:layout_constraintTop_toBottomOf="@id/job_title"
+                app:layout_constraintStart_toEndOf="@id/company_img"
+                />
+
+            <TextView
+                android:id="@+id/location_job"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:paddingLeft="5sp"
+                android:textSize="14sp"
+                android:text="@string/location"
+                android:textColor="@color/gray"
+                android:fontFamily="sans-serif-light"
+                app:layout_constraintTop_toBottomOf="@id/company_name"
+                app:layout_constraintStart_toEndOf="@id/company_img"
+                />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
-            android:id="@+id/job_title"
+            android:id="@+id/detail_work"
+            android:layout_marginTop="25sp"
+            android:layout_marginHorizontal="20sp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_width="300dp"
-            android:textSize="20sp"
-            android:text="@string/job_title"
-            android:padding="5sp"
-            android:textColor="@color/black"
-            android:textStyle="bold"
             android:fontFamily="@font/pt_sans"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/company_img"
+            android:textColor="@color/black"
+            android:justificationMode="inter_word"
+            android:textSize="15sp"
+            android:text="@string/detail_work_desc"
             />
 
-        <TextView
-            android:id="@+id/company_name"
-            android:layout_width="300dp"
+        <Button
+            android:id="@+id/btn_lamar"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="5sp"
-            android:textSize="14sp"
-            android:text="@string/company"
-            android:textColor="@color/gray"
-            android:fontFamily="sans-serif-light"
-            app:layout_constraintTop_toBottomOf="@id/job_title"
-            app:layout_constraintStart_toEndOf="@id/company_img"
-            />
-
-        <TextView
-            android:id="@+id/location_job"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:paddingLeft="5sp"
-            android:textSize="14sp"
-            android:text="@string/location"
-            android:textColor="@color/gray"
-            android:fontFamily="sans-serif-light"
-            app:layout_constraintTop_toBottomOf="@id/company_name"
-            app:layout_constraintStart_toEndOf="@id/company_img"
-            />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <TextView
-        android:id="@+id/title_detail_pekerjaan"
-        android:layout_marginTop="25sp"
-        android:layout_marginHorizontal="20sp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:text="@string/detail_work"
-        />
-
-    <TextView
-        android:id="@+id/detail_work"
-        android:layout_marginTop="2sp"
-        android:layout_marginHorizontal="20sp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:text="@string/detail_work_desc"
-        />
-
-    <TextView
-        android:id="@+id/title_requirement"
-        android:layout_marginTop="5sp"
-        android:layout_marginHorizontal="20sp"
-        android:layout_width="match_parent"
-        android:textColor="@color/black"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:text="@string/requirement"
-        />
-
-    <TextView
-        android:id="@+id/detail_requirement_desc"
-        android:layout_marginTop="2sp"
-        android:layout_marginHorizontal="20sp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:text="@string/requirement_desc"
-        />
-
-    <Button
-        android:id="@+id/btn_lamar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="35dp"
-        android:layout_marginTop="30sp"
-        android:background="@drawable/custom_input"
-        android:fontFamily="@font/pt_sans"
-        android:text="lamar"
-        android:layout_gravity="right"
-        android:textAppearance="@style/tab_text"
-        android:textStyle="bold" />
-</LinearLayout>
+            android:layout_marginHorizontal="35dp"
+            android:layout_marginTop="30sp"
+            android:layout_marginBottom="40sp"
+            android:background="@drawable/custom_input"
+            android:fontFamily="@font/pt_sans"
+            android:text="lamar"
+            android:layout_gravity="right"
+            android:textAppearance="@style/tab_text"
+            android:textStyle="bold" />
+    </LinearLayout>
+</ScrollView>
